--- a/javascript/ES2015+.md
+++ b/javascript/ES2015+.md
@@ -1,1 +1,98 @@
-# ..
+# ES2015+
+## const, let
+이제부터 변수 선언할 때 `var`를 쓰지 말고 `const`와  `let`을 사용하자. 
+
+* `var`는 함수 스코프(잘 이해 못함), `const`, `let`은 블록 스코프다.
+* `let`은 값이 변하는 변수, `const`는 값이 변하지 않는 변수
+* `const`를 쓰는 경우가 생각보다 많다. 함수를 변수로 할당할 때 대체로  `const`를 쓴다.
+
+## 템플릿 문자열
+문자열 리터럴 만드는 새로운 방식
+
+> ES5  
+```javascript
+var num1 = 1;
+var num2 = 2;
+var result = 3;
+var string = num1 + ' + ' + num2 + ' = ' + result;
+```
+
+> ES2015+  
+```javascript
+const num1 = 1;
+const num2 = 2;
+const result = 3;
+const string = `${num1} + ${num2} = result`
+```
+훨씬 편하고 보기에도 좋다!!
+
+## 객체 리터럴
+객체를 만드는 새로운 방식
+
+```javascript
+const sayNode = () => {
+	console.log('Node.js');
+};
+
+const newObj = {
+	sayJS() {
+		console.log('Javascript');
+	},
+	sayNode,
+	['ES'+6]: 'Fantastic'
+}
+```
+
+* 따로 `function` 선언 없이 함수를 바로 써버리기
+* 변수를 한 번 씀으로써 key, value 쌍을 대체해버리기
+* 동적으로 key값 할당하기
+
+위 세가지 방식에 익숙해질 것
+
+## 화살표 함수
+> ES5  
+```javascript
+function sayHello() {
+	console.log('hello');
+}
+```
+
+> ES2015+  
+```javascript
+const sayHello = () => {
+	console.log('hello');
+}
+```
+
+`this`의 활용에 따라 기존 방식, 화살표 함수를 골라 써야겠지만 웬만하면 화살표 함수를 쓰자
+
+## 구조 분해 할당
+구조화된 배열과 객체를 분해하여 값을 간편하게 변수에 할당하는 문법
+
+다음과 같은 배열과 객체가 있을 때
+```javascript
+const array = ['nodejs', {}, 10, true};
+
+const candyMachine = {
+	status: {
+		name: 'node',
+		count: 5
+	},
+	getCandy() {
+		this.status.count--;
+	}
+```
+배열 또는 객체 내의 값을 변수에 할당하는 방식
+```javascript
+const [str, obj, , bool] = array;
+
+const {getCandy, status: {count}} = candyMachine;
+```
+
+## 프로미스
+
+공부 중…
+
+## async/await
+
+공부 중…
